--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "version": "1.0.0",
   "author": "Kyle Gill <gillrobertkyle@gmail.com>",
   "dependencies": {
+    "babel-plugin-styled-components": "^1.10.7",
     "gatsby": "^1.9.277",
     "gatsby-link": "^1.6.46",
     "gatsby-plugin-manifest": "^1.0.27",
     "gatsby-plugin-offline": "^1.0.18",
     "gatsby-plugin-react-helmet": "^2.0.11",
+    "gatsby-plugin-styled-components": "^3.1.19",
     "react-animations": "^1.0.0",
     "react-dom-confetti": "^0.0.10",
     "react-helmet": "^5.2.0",
