--- a/package.json
+++ b/package.json
@@ -5,13 +5,13 @@
   "author": "Kyle Gill <gillrobertkyle@gmail.com>",
   "dependencies": {
     "babel-plugin-styled-components": "^1.10.7",
-    "gatsby": "^1.9.277",
-    "gatsby-link": "^1.6.46",
-    "gatsby-plugin-manifest": "^1.0.27",
-    "gatsby-plugin-offline": "^1.0.18",
+    "gatsby": "^2.28.2",
     "gatsby-plugin-react-helmet": "^2.0.11",
     "gatsby-plugin-styled-components": "^3.1.19",
+    "gatsby-plugin-web-font-loader": "^1.0.4",
+    "react": "^17.0.1",
     "react-animations": "^1.0.0",
+    "react-dom": "^17.0.1",
     "react-dom-confetti": "^0.0.10",
     "react-helmet": "^5.2.0",
     "styled-components": "^3.4.2"
