--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "babel-plugin-styled-components": "^1.10.7",
     "gatsby": "^2.28.2",
+    "gatsby-plugin-create-client-paths": "^2.6.0",
     "gatsby-plugin-gatsby-cloud": "^0.0.4",
     "gatsby-plugin-netlify": "^2.7.0",
     "gatsby-plugin-react-helmet": "^2.0.11",
